Portfolio 2.5.4	Error correction

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -106,7 +106,7 @@
 //========================================================================================================================================================
 .category-link {
 	display: inline-block;
-	border: 1px solid #f1f1f1;
+	border: 1px solid $grayColor;
 	border-radius: rem(5);
 	color: $grayColor;
 	font-size: rem(12);
